[package]
name = "tidploy"
version = "0.12.0"
edition = "2021"
license-file="LICENSE"
authors=["Tip ten Brink"]
description="Simple deployment tool for deploying small deploy units and loading secrets"
repository="https://github.com/tiptenbrink/tidploy"
readme="README.md"

[dependencies]
base64 = "0.21.5"
clap = { version = "4.4.10", features = ["derive"] }
keyring = { version = "2.1.0", default-features = false, features=[ "linux-no-secret-service" ] }
relative-path = "1.9.0"
rpassword = "7.3.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
spinoff = { version = "0.8.0", features = ["line"] }
thiserror = "1.0.50"
toml = "0.8.8"
tracing = "0.1"
tracing-subscriber = "0.3"