[package]
name = "tidploy"
version = "0.14.0"
edition = "2021"
license-file="LICENSE"
authors=["Tip ten Brink"]
description="Simple deployment tool for deploying small applications and loading secrets."
repository="https://github.com/tiptenbrink/tidploy"
readme="README.md"


[dependencies]
base64 = "=0.21.7"
clap = { version = "=4.4.16", features = ["derive"] }
keyring = { version = "=2.3.1", default-features = false, features=[ "linux-no-secret-service", "platform-windows", "platform-macos" ] }
relative-path = "=1.9.2"
rpassword = "=7.3.1"
serde = { version = "=1.0.195", features = ["derive"] }
serde_json = "=1.0.111"
spinoff = { version = "=0.8.0", features = ["line"] }
thiserror = "=1.0.56"
toml = "=0.8.8"
tracing = "=0.1.40"
tracing-subscriber = "=0.3.18"
tracing-error = "=0.2.0"
directories = "=5.0.1"
color-eyre = "=0.6.3"
test-log = { version="=0.2.15", default-features = false, features = ["trace"] }
duct = "=0.13.7"
camino = "1.1.6"
once_cell = "1.19.0"